End of Day 30th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/planCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/planCollection.html.twig
@@ -5,24 +5,16 @@
 
 {% block period_activity_widget %}
     {% spaceless %}
-        {% set panelStyle = 'default' %}
-        {% set transDomain = 'BusybeeTimeTableBundle' %}
-        {% set header = 'period.plan.activity.title' %}
-        {% set name = 'Add Activity Group' %}
-        {% set h3Content = '<div class="collection-actions collection-panel">' %}
-        {% set h3Content = h3Content ~ saveButton()|raw %}
-        {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
-        {% set h3Content = h3Content ~ upDownButton()|raw %}
-        {% set h3Content = h3Content ~ '</div>' %}
-        {% include '@BusybeeHome/Page/panelStart.html.twig' %}
-        <div class="container-fluid period">
-            <div class="row">
-                <div class="col-sm-4 well">
-                    {{ form_row(form.activity) }}
+        <div class="row row-striped{{ manager.ActivityStatus(value).class }}">
+            <div class="col-sm-4">{{ form_widget(form.activity) }}</div>
+            <div class="col-sm-4 col-sm-offset-4">{{ form_widget(form.period, {'value': app.request.get('id')}) }}
+                <div class="collection-actions collection-table">
+                    {{ saveButton()|raw }}
+                    {{ deleteButton({'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action'})|raw }}
+                    <span style="float: right;">&nbsp;</span>
+                    {{ upDownButton()|raw }}
                 </div>
             </div>
-            <div class="messageWindow"></div>
         </div>
-        {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
     {% endspaceless %}
 {% endblock period_activity_widget %}
