--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
@@ -8,4 +8,10 @@
         remove: '<button title="{{ 'period.plan.title.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
     });
+    {% if form.vars.manager.failedCount > 0 %}
+    $(document).ready(function () {
+        var data = '<div class="alert alert-warning">{{ 'period.activities.activity.failed.count'|trans({'%count%': form.vars.manager.failedCount}) }}</div>';
+        $('.messageWindow').html(data);
+    });
+    {% endif %}
 </script>
