End of Day 1st June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script type="text/javascript" language="JavaScript">
 
     $('.monitorChange').change(function () {
         $('.formChanged').prop("disabled", true);
@@ -20,4 +20,4 @@
         $(".formChanged").prop("disabled", false);
     })
 
-</script>;
+</script>
