--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
@@ -2,8 +2,8 @@
 <script type="text/javascript">
     $(".periodActivityList").collection({
         name_prefix: '{{ form.activities.vars.full_name }}',
-        allow_up: true,
-        allow_down: true,
+        allow_up: false,
+        allow_down: false,
         add: '<button title="{{ 'period.plan.title.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
         remove: '<button title="{{ 'period.plan.title.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
