--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/planScript.html.twig
@@ -6,12 +6,60 @@
         allow_down: false,
         add: '<button title="{{ 'period.plan.title.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
         remove: '<button title="{{ 'period.plan.title.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
-        add_at_the_end: true
+        add_at_the_end: true,
+        before_remove: function (collection, element) {
+            var source = $(element[0]).find('.removeActivity');
+            var id = source.attr('id');
+            id = id.replace('removeActivity', '');
+            if (id === '') {
+                return true;
+            }
+
+            return removeActivity(id);
+        }
     });
+
     {% if form.vars.manager.failedCount > 0 %}
     $(document).ready(function () {
         var data = '<div class="alert alert-warning">{{ 'period.activities.activity.failed.count'|trans({'%count%': form.vars.manager.failedCount}) }}</div>';
-        $('.messageWindow').html(data);
+        $('.messageWindow').html(data).fadeIn(5).fadeOut(3000);
     });
     {% endif %}
+
+    $('.lineList').on('change', function () {
+        var line = $(this).val();
+
+        var path = '{{ path('period_add_activities_to_plan', {'id': app.request.get('id'), 'line': '__line__'}) }}';
+        path = path.replace('__line__', line);
+
+        window.open(path, '_self');
+    });
+
+    function removeActivity(id) {
+        if (id > 0) {
+
+            var path = '{{ path('period_remove_activity', {'id': app.request.get('id'), 'activity': '__activity__'}) }}';
+            path = path.replace('__activity__', id);
+
+            $.ajax({
+                url: path,
+                type: 'POST',
+                async: false,
+                success: function (data) {
+                    if (data['status'] === 'success') {
+                        $('.messageWindow').html(data['message']).fadeIn(5).fadeOut(3000);
+                        return true;
+                    } else if (data['status'] === 'error') {
+                        $('.messageWindow').html(data['message']).fadeIn(5).fadeOut(3000);
+                        return false;
+                    } else if (data['status'] === 'warning') {
+                        $('.messageWindow').html(data['message']).fadeIn(5).fadeOut(3000);
+                        return false;
+                    }
+                }
+            });
+        }
+        return true;
+    }
+
 </script>
