--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/fullreport.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/fullreport.html.twig
@@ -12,7 +12,7 @@
 
 {% block contentContainer %}
     <div class="messageWindow"></div>
-    {% set header = 'period.plan.header' %}
+    {% set header = 'period.report.full.header' %}
     {% set name = {'%day%': manager.period.columnName, '%period%': manager.period.fullName} %}
     {% set panelParagraph = 'period.plan.panelparagraph' %}
     {% set panelParams = {'%start%': manager.period.startTime, '%end%': manager.period.endTime} %}
@@ -22,25 +22,9 @@
         <h3>{{ panelParagraph|trans(panelParams) }}</h3>
     </div>
     <div>{{ closeButton()|raw }}
-        {{ resetButton({'windowOpen': {'route': path('period_plan_report', {'id': app.request.get('id')})}, 'title': 'form.refresh.button', 'transDomain': 'BusybeeHomeBundle'})|raw }}
+        {{ resetButton({'windowOpen': {'route': path('period_full_report', {'id': app.request.get('id')})}, 'title': 'form.refresh.button', 'transDomain': 'BusybeeHomeBundle'})|raw }}
     </div>
-    <h3>{{ 'period.activities.activity.report.availableStaff'|trans({'%count%': report.staff.count}) }}</h3>
-    <ul>
-        {% for staff in report.staff %}
-            <li>{{ staff.fullName }} <span class="small alert-warning">{{ staff.departments }}</span></li>
-        {% endfor %}
-    </ul>
-
-    <div>{{ closeButton()|raw }}
-        {{ resetButton({'windowOpen': {'route': path('period_plan_report', {'id': app.request.get('id')})}, 'title': 'form.refresh.button', 'transDomain': 'BusybeeHomeBundle'})|raw }}
-    </div>
-    <h3>{{ 'period.activities.activity.report.availableSpace'|trans({'%count%': report.staff.count}) }}</h3>
-    <ul>
-        {% for space in report.spaces %}
-            <li>{{ space.nameCapacity }}</li>
-        {% endfor %}
-    </ul>
-
+    {{ dump() }}
 {% endblock contentContainer %}
 
 {% block javascripts %}
