Activity to Activity Reference of Students
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.html.twig
@@ -6,8 +6,11 @@
     });
 
     $(".changeRecord").change(function () {
-
+        {% if app.request.get('closeWindow') is not empty %}
+        var path = "{{ path(route, {'id': '__id__', 'closeWindow': '_closeWindow'}) }}";
+        {% else %}
         var path = "{{ path(route, {'id': '__id__'}) }}";
+        {% endif %}
 
         var id = $(this).val();
         if (id == '') {
