Report and TimeTable Planning
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Plan/report.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Plan/report.html.twig
@@ -14,7 +14,7 @@
     <div class="messageWindow"></div>
     {% set header = 'period.plan.header' %}
     {% set name = {'%day%': manager.period.columnName, '%period%': manager.period.fullName} %}
-    {% set panelParagraph = 'period.plan.panelparagraph' %}
+    {% set panelParagraph = 'period.plan.reportparagraph' %}
     {% set panelParams = {'%start%': manager.period.startTime, '%end%': manager.period.endTime} %}
     {% set transDomain = 'BusybeeTimeTableBundle' %}
     <div class="row alert alert-primary">
