--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% form_theme form 'BusybeeFormBundle:Template:bootstrap.html.twig'
 '@BusybeeForm/Template/jquery.collection.html.twig'
-'BusybeeTimeTableBundle:ActivityGroups:activityGroupsCollection.html.twig'
+'BusybeeTimeTableBundle:Line:lineCollection.html.twig'
 '@BusybeeTimeTable/Columns/columnCollection.html.twig'
 '@BusybeeTimeTable/Days/dayCollection.html.twig' %}
 
